# embsim

./: BOARD_ENGINE.md  CONTRACT.md  Cargo.toml  README.md  TESTING.md  coverage-baseline.txt  deny.toml
.github/: dependabot.yml
.github/instructions/: rust.instructions.md
.github/workflows/: ci.yml
board/: Cargo.toml
board/src/: board.rs  cluster.rs  component.rs  diagnostics.rs  engine.rs  lib.rs  mcu.rs  net.rs  netlist.rs  registry.rs  system.rs
board/tests/: bench_component.rs  clock_guard.rs  cluster_handchecks.rs  ds2_live_force_path.rs  ds2_regressions.rs  fixture_smoke.rs  live_engine.rs  mcu_component.rs  stream_routing.rs
board/tests/fixtures/: ds2_addon.net
build-support/: Cargo.toml
build-support/src/: lib.rs
build-support/tests/: link.rs
core/: Cargo.toml
core/src/: event.rs  lib.rs  serial_pty.rs  virtual_clock.rs
core/tests/: serial_pty.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/minimal/tests/: runs.rs
models/: Cargo.toml
models/src/: ads122u04.rs  ads122u04_component.rs  edge.rs  gantry.rs  lib.rs  limit_switch.rs  sample.rs  stepper.rs  strain_gauge.rs
peripherals/: Cargo.toml
peripherals/src/: encoder.rs  filesystem.rs  gpio.rs  i2c.rs  instance.rs  lib.rs  lock.rs  pulse_out.rs  serial.rs  system.rs  timer.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/tests/: emulator.rs
tools/memory-inspect/: Cargo.toml
tools/memory-inspect/examples/: parse_firmware.rs
tools/memory-inspect/src/: archive_values.rs  dwarf_parser.rs  hal_tables.rs  lib.rs  runtime.rs  types.rs
tools/memory-inspect/tests/: archive_values.rs  parse_fixture.rs
tools/trace/: Cargo.toml
tools/trace/src/: lib.rs  recorder.rs  server.rs  ui.rs
tools/trace/static/: trace.css  trace.html  trace.js
tools/ui/: Cargo.toml
tools/ui/src/: lib.rs  server.rs  shell.rs
