[workspace]
members = [
    "core",
    "peripherals",
    "platforms/p2",
    "models",
    "runtime",
    "build-support",
    "tools/memory-inspect",
    "tools/ui",
    "tools/trace",
    "examples/minimal",
]
resolver = "2"

# Shared package metadata. A crate opts in with `version.workspace = true`,
# `license.workspace = true`, etc.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RileyMcCarthy/embsim"

# Centralized external dependency versions to prevent drift across crates.
[workspace.dependencies]
nix = { version = "0.31" }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
libc = "0.2"
object = "0.39"
gimli = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
