[workspace]
members = [
    "board",
    "core",
    "peripherals",
    "platforms/p2",
    "models",
    "runtime",
    "build-support",
    "tools/memory-inspect",
    "tools/ui",
    "tools/trace",
    "examples/minimal",
]
resolver = "2"

# Shared package metadata. A crate opts in with `version.workspace = true`,
# `license.workspace = true`, etc.
[workspace.package]
version = "0.1.0"
edition = "2021"
# Minimum supported Rust version. Determined empirically: gimli 0.34 (pulled in
# by tools/memory-inspect) requires rustc 1.88, and 1.88 builds the whole
# workspace cleanly while 1.87 is rejected at the gimli version-gate. Gated by
# the `msrv` job in .github/workflows/ci.yml.
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/RileyMcCarthy/embsim"

# Centralized external dependency versions to prevent drift across crates.
[workspace.dependencies]
nix = { version = "0.31" }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
libc = "0.2"
object = "0.39"
gimli = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
