[package]
name = "embsim-board"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Component-centric board/system simulation engine for embsim (netlist ingestion, net resolution, diagnostics)"
keywords = ["embedded", "emulator", "simulation", "sil"]
categories = ["embedded", "simulation"]

[dependencies]
tracing.workspace = true
