[package]
name = "embsim-board"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Component-centric board/system simulation engine for embsim (netlist ingestion, net resolution, diagnostics)"
keywords = ["embedded", "emulator", "simulation", "sil"]
categories = ["embedded", "simulation"]

[dependencies]
embsim-core = { path = "../core" }
# The MCU component bridges serial channels into the peripheral banks
# (peripherals never depends back on board — no cycle).
embsim-peripherals = { path = "../peripherals" }
libc.workspace = true
nix.workspace = true
tracing.workspace = true

[dev-dependencies]
# Dev-only cycle (allowed by Cargo): the DS2Addon integration tests exercise
# the live ADS122U04 component and share its pin-facade table, so the board
# tests import the models crate that depends on this one.
embsim-models = { path = "../models" }
