[package]
name = "embsim-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded MCU simulator — core infrastructure (virtual clock, serial PTY, events)"
keywords = ["embedded", "emulator", "simulation", "sil"]
categories = ["embedded", "simulation"]

[dependencies]
nix = { workspace = true, features = ["term", "fs"] }
tracing.workspace = true
