[package]
name = "embsim-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable hardware component models for embsim (ADC IC, limit switch, edge detector)"
keywords = ["embedded", "emulator", "simulation", "sil"]
categories = ["embedded", "simulation"]

[dependencies]
embsim-core = { path = "../core" }
nix.workspace = true
libc.workspace = true
tracing.workspace = true
