[package]
name = "embsim-peripherals"
version = "0.1.0"
edition = "2021"
description = "Generic MCU peripheral implementations for embsim (GPIO, serial, encoder, etc.)"

[dependencies]
embsim-core = { path = "../core" }
parking_lot = "0.12"
nix = { version = "0.29", features = ["term", "fs"] }
tracing = "0.1"
