[package]
name = "embsim-peripherals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic MCU peripheral implementations for embsim (GPIO, serial, encoder, etc.)"
keywords = ["embedded", "emulator", "peripherals", "sil"]
categories = ["embedded", "simulation"]

[dependencies]
embsim-core = { path = "../core" }
parking_lot.workspace = true
nix.workspace = true
tracing.workspace = true
