[package]
name = "embsim-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "embsim emulator runtime — Platform/Machine traits + an Emulator builder that owns peripheral init ordering"
keywords = ["embedded", "emulator", "simulation", "sil"]
categories = ["embedded", "simulation"]

[dependencies]
embsim-core = { path = "../core" }
embsim-peripherals = { path = "../peripherals" }
embsim-memory-inspect = { path = "../tools/memory-inspect" }
tracing.workspace = true
