[package]
name = "embsim-memory-inspect"
version = "0.1.0"
edition = "2021"
description = "Firmware memory introspection — parse DWARF debug info from C firmware to extract enums, struct layouts, and read runtime variable state"

[dependencies]
object = "0.36"
gimli = "0.31"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
