[package]
name = "embsim-memory-inspect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Firmware memory introspection — parse DWARF debug info from C firmware to extract enums, struct layouts, and read runtime variable state"
keywords = ["dwarf", "debug-info", "embedded", "introspection"]
categories = ["development-tools::debugging", "embedded"]

[dependencies]
object.workspace = true
gimli.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
