[package]
name = "embsim-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Live trace viewer for embsim — records and visualizes model states, peripheral values, and C variables"
keywords = ["embedded", "emulator", "trace", "sil"]
categories = ["embedded", "simulation", "development-tools"]

[features]
default = ["web"]
# The browser-based viewer (axum server + embsim-ui plugin). Disable
# (`default-features = false`) for headless recording — just the recorder +
# poller, with no axum/tokio/web dependency.
web = ["dep:axum", "dep:tokio", "dep:embsim-ui"]

[dependencies]
embsim-core = { path = "../../core" }
embsim-memory-inspect = { path = "../memory-inspect" }
embsim-ui = { path = "../ui", optional = true }
serde.workspace = true
serde_json.workspace = true
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing.workspace = true
parking_lot.workspace = true
