[package]
name = "embsim-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pluggable web UI shell for embsim — views register themselves, served via a single axum server"
keywords = ["embedded", "emulator", "web-ui", "sil"]
categories = ["embedded", "simulation", "development-tools"]

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
